# hayplot

./: .gitignore  COMPARISON.md  Cargo.toml  README.md  hayashi.toml
.github/workflows/: release.yml
examples/: aes_color_test.hay  area_chart.hay  bar_chart.hay  basic_scatter.hay  boxplot.hay  custom_dimensions.hay  did_test.hay  draw_element_test.hay  facet_grid_test.hay  facet_wrap.hay  facet_wrap_test.hay  filter_facet.hay  heatmap.hay  histogram.hay  legend_bottom_outside.hay  legend_left_outside.hay  legend_right_outside.hay  limits_test.hay  line_and_scatter.hay  log_scale.hay  map_brazil_states.hay  map_choropleth.hay  map_simple.hay  map_test.hay  margins_padding_demo.hay  new_geoms_test.hay  phillips_curve.hay  reference_lines.hay  save_png.hay  save_svg.hay  spline_chart.hay  step_chart.hay  test_list.hay  theme_customization.hay  themes_test.hay  white_noise.hay
manual/: manual.aux  manual.idx  manual.out  manual.tex  manual.toc
src/: lib.rs  math.rs  tests.rs  utils.rs  wkt.rs
